test/invalid/ClasslessMethod/ClasslessMethod.plume
/**
 * @author Robin Burgess 36815
 */
 method classlessMethod : () -> String is "This will never be printed..."